# cmake-project-demo

./: .gitignore  CMakeLists.txt  README.md  annotated.html  build.sh  classes.html  dir_000000_000001.html  dir_3756d50f4003bc63fa3fe49460f9c79d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherits.html  menudata.js  namespaces.html
.github/workflows/: ci.yml  doc.yml
Doxygen/: Doxyfile.in
d0/d58/: DrinkInterface_8h.html  DrinkInterface_8h_source.html
d1/d92/: classdemo_1_1Break.html
d1/dbf/: classdemo_1_1Break-members.html
d2/d0d/: namespacedemo.html
d2/d54/: Break_8h__incl.map  Break_8h__incl.md5
d3/d06/: classdemo_1_1Drink__coll__graph.md5
d4/de6/: classdemo_1_1DrinkInterface__inherit__graph.map  classdemo_1_1DrinkInterface__inherit__graph.md5
d5/d45/: classdemo_1_1Drink.html
d5/d56/: Drink_8cpp.html
d5/da5/: Break_8h__dep__incl.map  Break_8h__dep__incl.md5
d5/db8/: Break_8cpp__incl.map  Break_8cpp__incl.md5
d6/d92/: classdemo_1_1BreakFactory.html
d6/dda/: classdemo_1_1DrinkInterface-members.html
d7/d3f/: BreakFactory_8cpp.html
d7/d6a/: BreakFactory_8cpp__incl.map  BreakFactory_8cpp__incl.md5
d7/d8b/: classdemo_1_1DrinkInterface.html
d8/d30/: Drink_8h__dep__incl.map  Drink_8h__dep__incl.md5
d8/d81/: Drink_8h.html  Drink_8h_source.html
d8/d8e/: DrinkInterface_8h__dep__incl.map  DrinkInterface_8h__dep__incl.md5
d9/d7e/: classdemo_1_1Drink__inherit__graph.map  classdemo_1_1Drink__inherit__graph.md5
d9/d89/: Drink_8h__incl.map  Drink_8h__incl.md5
da/d01/: Break_8h.html  Break_8h_source.html
da/d8b/: BreakFactory_8h__incl.map  BreakFactory_8h__incl.md5
db/d33/: BreakFactory_8h.html  BreakFactory_8h_source.html
de/d47/: classdemo_1_1Drink-members.html
de/d5c/: classdemo_1_1BreakFactory-members.html
de/d77/: Break_8cpp.html
de/d7a/: Drink_8cpp__incl.map  Drink_8cpp__incl.md5
df/d63/: BreakFactory_8h__dep__incl.map  BreakFactory_8h__dep__incl.md5
doxygen/: doxygen.cmake
examples/simple/: CMakeLists.txt  main.cpp
search/: all_0.js  all_2.js  all_3.js  all_5.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  searchdata.js  variables_0.js
src/: Break.cpp  Break.h  BreakFactory.cpp  BreakFactory.h  BreakTest.cpp  CMakeLists.txt
src/internal/: Drink.cpp  Drink.h  DrinkInterface.h  DrinkTest.cpp
src/mock/: MockDrink.h
